--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
+
 }
 
 .profile-image {
@@ -27,6 +32,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  
+  
 }
 
 button {
@@ -35,6 +42,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
+  
 }
 
 a {
@@ -45,4 +54,17 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  gap: 16px;
+ 
 }
+
+.notification-profile-image {
+  justify-content: end;
+  display: flex;
+  flex: 1;
+  gap: 16px;
+}
+
