--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+ 
+  
 }
 
 img {
@@ -23,4 +27,54 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+
+
+a {
+  text-decoration: none;
+  color: rgb(38, 38, 38);
+}
+
+.header,
+.footer{
+ display: flex;
+ justify-content: space-between;
+}
+
+.footer{
+  background-color:  #eeeeee;
+  align-items: flex-end;
+}
+
+.content {
+  text-align: center;
+ align-items: center;
+ justify-content: center;
+ display: flex;
+ flex-direction: column;
+ flex: 1;
+  
+}
+
+.buttons {
+  margin-top: 10px;
+}
+
+.left-links,
+.right-links {
+  gap: 20px;
+}
+
+.left-links {
+  margin-left: 20px;
+}
+
+.right-links {
+  margin-right: 20px;
 }
